language/move-lang/tests/move_check/typing/subtype_return_invalid.exp
error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:4:15 ───
   │
 4 │     fun t0(u: &u64): &mut u64 {
   │               ---- The type: '&u64'
   │                      -------- Is not a subtype of: '&mut u64'
 5 │         u
   │         ^ Invalid return expression
   │

error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:8:15 ───
   │
 8 │     fun t1(s: &S): &mut S {
   │               -- The type: '&0x8675309::M::S'
   │                    ------ Is not a subtype of: '&mut 0x8675309::M::S'
 9 │         s
   │         ^ Invalid return expression
   │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:12:26 ───
    │
 12 │     fun t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
    │                          ---- The type: '&u64'
    │                                        -------- Is not a subtype of: '&mut u64'
 13 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:16:16 ───
    │
 16 │     fun t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
    │                ---- The type: '&u64'
    │                                  -------- Is not a subtype of: '&mut u64'
 17 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:20:16 ───
    │
 20 │     fun t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
    │                ---- The type: '&u64'
    │                                  -------- Is not a subtype of: '&mut u64'
 21 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    │

